--- a/yoga/src/components/layout/MenuMobile/MenuMobile.module.css
+++ b/yoga/src/components/layout/MenuMobile/MenuMobile.module.css
@@ -35,6 +35,8 @@
     transition: 0.5s;
 }
 
-@media (min-width: 320px) and (max-width: 600px) {
-
+@media screen and (max-width: 768px) {
+    .mobile_menu_section{
+        width: 100%;
+    }
    }
