--- a/yoga/src/components/pages/HomeSection/HomeTwo.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeTwo.module.css
@@ -65,12 +65,13 @@
     border-radius:  10px;
 }
 
+@media screen and (max-width: 768px) {
 
-@media screen and (min-width: 320px) and (max-width: 560px) {
  
     .home__section__two{
         width: 100%;
         height: 100vh;
+        margin-top: 3rem;
     }
 
     .logo_apoio_home{
