--- a/yoga/src/App.css
+++ b/yoga/src/App.css
@@ -33,12 +33,18 @@ h1{
     margin: 3rem;
 }
 
+.container_all__section {
+  max-width: 100%;
+  margin: 0 auto;
+}
 
-@media screen and (min-width:320px) and (max-width:560px){
-  h1{
-    color:white;
-        letter-spacing: 2px;
-        font-size: 0.8rem;
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 90%;
   }
 }
+
+
+
+
 
