--- a/yoga/src/components/pages/AboutSection/About.module.css
+++ b/yoga/src/components/pages/AboutSection/About.module.css
@@ -5,6 +5,11 @@
     margin: 0 auto;
 }
 
-@media screen and (min-width:320px) and (max-width:560px){
-    
+@media screen and (max-width: 768px){
+    .about__container{
+        width: 100%;
+        height: 100vh;
+        background-color: white;
+        margin: 0 auto;
+    }
 }
