--- a/yoga/src/components/pages/AboutSection/AboutSectionOne.module.css
+++ b/yoga/src/components/pages/AboutSection/AboutSectionOne.module.css
@@ -6,12 +6,12 @@
 	background-color: rgba(241, 239, 239, 0.837);
 }
 
-@media screen and (min-width:320px) and (max-width:560px){
+@media screen and  (max-width:768px){
 .aboutsecone__container{
-	width: 100%;
-	height: 100vh;
+	width: 90%;
+	height: 100%;
 	display: flex;
-	justify-content: space-evenly;
-	background-color: rgba(241, 239, 239, 0.837);
+	flex-direction: column;
+	align-items: center;
 }
 }
