--- a/yoga/src/components/pages/AboutSection/BossCard.module.css
+++ b/yoga/src/components/pages/AboutSection/BossCard.module.css
@@ -112,59 +112,71 @@
 	}
 }
 
-@media screen and (min-width:320px) and (max-width:560px){
-	
-.boss__geral{
-	position: absolute;
-	top:33rem;
-	left: 0rem;
-}
+@media screen and (max-width: 768px){
 
-.card__container__about img{
-    width: 11rem;
-    height: 11rem;
-    border-radius: 10px;
-   
-    animation: myAnim 3s ease 0s 1 normal forwards;
-    cursor: pointer;
-}
+    
+    .card__container__about img{
+        width: 10rem;
+        height: 12rem;
+        border-radius: 10px;
+        position: absolute;
+        left:5rem;
+        top:-5rem;
+        animation: myAnim 3s ease 0s 1 normal forwards;
+        cursor: pointer;
+    }
+    
+    
+    .card__container__about .card_um{
+        z-index: 1;
+        animation: myAnim 2s ease 0s 1 normal forwards;
+    }
+    
+    .card__container__about .card_dois{
+        position: absolute;
+        top:3rem;
+        left:18rem;
+        width: 8rem;
+        height: 12rem;
+        z-index: 0;
+        animation: myAnim 2.5s ease 0s 1 normal forwards;
+    }
+    
+    .card_dois img{
+        width: 8rem;
+        height: 12rem;
+    }
+    
+    .about__container__description{
+        background-color: rgba(216, 214, 214, 0);
+        width: 35rem;
+        height: 33rem;
+        border-radius: 6px;
+        position: absolute;
+        top:7rem;
+        left: 10rem;
+        z-index: 0;
+    }
+    
+    .about__container__description h2{
+        color:rgb(90, 64, 64);
+        letter-spacing: 2px;
+        font-size: 0.9rem;
+        width: 10%;
+        
+    }
+    
+    .about__container__description .osmar{
+        position: absolute;
+        top:1rem;
+        left: -1.5rem;
+    }
+    
+    .about__container__description .matilde{
+        position: absolute;
+        top: -8rem;
+        left: 10rem;
+        z-index: 2;
+    }
 
-
-.card__container__about .card_um{
-    z-index: 1;
-	width: 11rem;
-    height: 11rem;
-}
-
-.card__container__about .card_dois{
-
-    width: 11rem;
-    height: 11rem;
-    z-index: 0;
-    animation: myAnim 2.5s ease 0s 1 normal forwards;
-}
-
-
-.about__container__description{
-    background-color: rgba(216, 214, 214, 0);
-    width: 12rem;
-    height: 13rem;
-
-
-}
-
-.about__container__description h2{
-    color:rgb(90, 64, 64);
-    letter-spacing: 2px;
-    font-size: 1.6rem;
-	
-}
-
-.about__container__description .osmar{
-
-}
-
-.about__container__description .matilde{
-
-}
 }
