--- a/yoga/src/components/pages/AboutSection/DescriptionHostelTwo.module.css
+++ b/yoga/src/components/pages/AboutSection/DescriptionHostelTwo.module.css
@@ -47,3 +47,65 @@
     margin: 2rem;
     text-align: center;
 }
+
+@media screen and  (max-width:568px){
+
+    .description__hostel__two__container{
+        margin-top:18rem;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .section_two{
+        background-color: rgba(223, 221, 215, 0.727);
+        width: 80%;
+        height:90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: nowrap;
+        text-align: center;
+        border-radius: 10px;
+        padding: 1rem;
+       
+       
+       
+    }
+    
+    
+    .card__picture__about__two{
+        display: flex;
+        flex-direction: row;
+    }
+
+     
+    .card__picture__about__two img{
+        width: 8rem;
+        height: 9rem;
+    }
+    
+    .img__apoio__about__description{
+        width: 21rem;
+        height: 16rem;
+        border-radius: 30px ;
+        border: 2px solid rgb(96, 93, 21);
+        padding: 0.5rem;
+        margin: 0.6rem;
+    }
+    
+    
+    .description__hostel__two__container p{
+        color: rgba(27, 15, 15, 0.887);
+        letter-spacing: 2px;
+        line-height: 30px;
+        font-size: 0.8rem;
+        margin: 2rem;
+        margin-right: 1rem;
+        text-align: center;
+        overflow-y: auto;
+    }
+}
