--- a/yoga/src/components/pages/HomeSection/CarouselHome.module.css
+++ b/yoga/src/components/pages/HomeSection/CarouselHome.module.css
@@ -4,7 +4,9 @@
     top:16rem;
 }
 
-@media screen and (min-width:320px) and (max-width:589px){
+@media screen and (max-width: 768px){
  
-    
+    .carousel__home{
+        margin-top: 1rem;
+    }
 }
