--- a/yoga/src/components/pages/HomeSection/Localization.module.css
+++ b/yoga/src/components/pages/HomeSection/Localization.module.css
@@ -48,3 +48,91 @@ border-radius: 10px;
     padding-bottom: 1rem;
     letter-spacing: 2px;
 }
+
+.inf_un__container_a{
+    background-color: rgba(128, 128, 128, 0.22);
+    border-radius: 10px;
+        width: 40%;
+        height: 10%;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content:start;
+        margin:1rem;
+        padding: 1rem;
+        overflow-x: auto;
+}
+
+.inf_un__container_a p{
+    text-align: start;
+    padding-top: 0.5rem;
+    padding-bottom: 1rem;
+    letter-spacing: 2px;
+}
+
+@media screen and (max-width: 768px){
+
+    
+    .map__container h1{
+        color: white;
+        font-size: 1.5rem;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+        margin: 3rem;
+    }
+    
+    .map__section{
+        margin:2rem;
+        padding: 2rem;
+    
+    }
+    
+    .inf__container{
+        width: 100%;
+        height: 40%;
+        display: flex;
+        justify-content: space-around;
+    }
+    
+    .inf_un__container{
+    background-color: rgba(128, 128, 128, 0.22);
+    border-radius: 10px;
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content:start;
+        margin:1rem;
+        padding: 1rem;
+    }
+
+    .inf_un__container_a{
+        background-color: rgba(128, 128, 128, 0.22);
+        border-radius: 10px;
+            width: 40%;
+            height: 20%;
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            justify-content:start;
+            margin:1rem;
+            padding: 1rem;
+            overflow-y: auto;
+    }
+
+    .inf_un__container_a p{
+        text-align: start;
+        padding-top: 0.5rem;
+        padding-bottom: 1rem;
+        letter-spacing: 2px;
+        font-size: 0.7rem;
+    }
+    
+    .inf_un__container p{
+        text-align: start;
+        padding-top: 0.5rem;
+        padding-bottom: 1rem;
+        letter-spacing: 2px;
+        font-size: 0.7rem;
+    }
+}
