--- a/yoga/src/components/pages/HomeSection/TestimonialSec.module.css
+++ b/yoga/src/components/pages/HomeSection/TestimonialSec.module.css
@@ -45,7 +45,7 @@
     width: 100px;
 }
 
-@media screen and (min-width:320px) and (max-width:560px){
+@media screen and (max-width: 768px){
 
     .card__testimonials{
         width: 100%;
@@ -63,14 +63,14 @@
         flex-direction: column;
         text-align: center;
         width: 100%;
-        height: 100%;
+        height:100%;
         margin-top:2.5rem;
     }
     
     .depoiment{
         background-color: rgba(128, 128, 128, 0.446);
         width: 100%;
-        height: 50vh;
+        height: 40vh;
         border-radius: 20px;
         text-align: center;
         display: flex;
@@ -78,6 +78,7 @@
         justify-content: center;
         align-items: center;
         margin-top: 1rem;
+        overflow-y: auto;
     }
     
     .card__unity p{
