--- a/yoga/src/components/pages/HomeSection/Testimonials.module.css
+++ b/yoga/src/components/pages/HomeSection/Testimonials.module.css
@@ -29,7 +29,7 @@
     margin: 0rem;
 }
 
-@media screen and (min-width:320px) and (max-width:560px){
+@media screen and (max-width: 768px){
     .testimonials__container{
        
     }
@@ -40,7 +40,7 @@
     
     
     .card__container{
-
+    margin-bottom: 6rem;
     }
 
 }
